@@ -9,7 +9,6 @@
 #include <stdio.h>
 #include "udbradtree.h"
 #include "radtree.h"
-#define RADTREE(ptr) ((struct udb_radtree_d*)UDB_PTR(ptr))
 #define RADARRAY(ptr) ((struct udb_radarray_d*)UDB_PTR(ptr))
 
 /** see if radarray can be reduced (by a factor of two) */
